docs: add documentation for get opening
